# DGM-Level-Editor

./: .gitignore  CMakeLists.txt  Directory.Build.props  MakeRelease.bat  README.md  Readme.md  app.ini  changelog.txt  config.json  copy-dlls.bat  dependencies.cmake  mesh_item_trigger.lvd  pokus.lvd  prepare-release.bat  sample-config-2.json  sample-config.json  tag_test.lvd
.github/workflows/: continuous-integration.yml
cmake/: cpp.cmake  dependencies.cmake  settings.cmake  utils.cmake  version.cmake
docs/: writing_config.md
graphics/configs/: item.json
lib/: .clang-format  .editorconfig  CMakeLists.txt  use-after-move.ruleset
lib/benchmarks/: CMakeLists.txt
lib/benchmarks/src/: Main.cpp
lib/include/: AppStateEditor.hpp  Editor.hpp  EditorState.hpp  FileApi.hpp  Globals.hpp  Gui.hpp  LogConsole.hpp  ProgramOptions.hpp  ShortcutEngine.hpp  ShortcutEngineInterface.hpp  Tilemap.hpp  Tool.hpp  ToolItem.hpp  ToolMesh.hpp  ToolTrigger.hpp  Utilities.hpp
lib/include/Commands/: CommandHelper.hpp  CommandHistory.hpp  CommandInterface.hpp  CommandQueue.hpp  CreateDeleteObjectCommand.hpp  CreateItemCommand.hpp  CreateTriggerCommand.hpp  DeleteItemCommand.hpp  DeleteObjectCommand.hpp  DeleteTriggerCommand.hpp  MoveObjectCommand.hpp  ResizeCommand.hpp  RestoreFromSnapshotCommand.hpp  SetItemPropertyCommand.hpp  SetObjectPropertyCommand.hpp  SetTileAreaCommand.hpp  SetTileCommand.hpp  SetTilePropertyCommand.hpp  ShrinkToFitCommand.hpp  UndoableCommandInterface.hpp
lib/include/Dialogs/: DialogBase.hpp  DialogBuilderHelper.h  DialogBuilderHelper.hpp  EditPropertyDialog.hpp  ErrorInfoDialog.hpp  NewLevelDialog.hpp  PlaytestSettingsDialog.hpp  ResizeLevelDialog.hpp  UpdateConfigPathDialog.hpp  YesNoCancelDialog.hpp
lib/include/Editor/: Editor.hpp  EditorInterface.hpp  EditorState.hpp  EditorStateManager.hpp  NullEditor.hpp
lib/include/Interfaces/: CurrentLayerObserverInterface.hpp  DialogInterfaces.hpp  EditorInterface.hpp  FileApiInterface.hpp  PlaytestLauncherInterface.hpp  ProcessCreatorInterface.hpp  ToolInterface.hpp  UndoableCommandInterface.hpp
lib/include/Launcher/: NullPlaytestLauncher.hpp  PlaytestLauncher.hpp
lib/include/LevelMesh/: DrawableDgmMesh.hpp  DrawableLeveldMesh.hpp
lib/include/Shortcuts/: ShortcutEngine.hpp  ShortcutEngineInterface.hpp
lib/include/ToolProperties/: MeshToolProperty.hpp  TriggerToolProperty.hpp
lib/include/Tools/: LayerController.hpp  PhysicalPen.hpp  SidebarUserInterface.hpp  SidebarUserItem.hpp  SidebarUserMesh.hpp  SidebarUserTrigger.hpp  SidebarUserWithSprites.hpp  Tool.hpp  ToolInterface.hpp  ToolItem.hpp  ToolMesh.hpp  ToolProperty.hpp  ToolPropertyWithImageInterface.hpp  ToolTrigger.hpp  ToolWithDragAndSelect.hpp
lib/include/Utilities/: Box.hpp  ClickPreventer.hpp  CoordConverter.hpp  DragContext.hpp  Error.hpp  FileApi.hpp  FontLoader.hpp  GC.hpp  ProcessCreator.hpp  SafePtr.hpp  Utilities.hpp
lib/src/: AppStateEditor.cpp  BackgroundGrid.cpp  Camera.cpp  Editor.cpp  EditorState.cpp  FileApi.cpp  JsonHelper.cpp  LogConsole.cpp  NewLevelDialog.cpp  ShortcutCombo.cpp  ShortcutEngine.cpp  Tilemap.cpp  Tool.cpp  ToolItem.cpp  ToolMesh.cpp  ToolProperty.cpp  ToolTrigger.cpp  Utilities.cpp
lib/src/Commands/: CommandHistory.cpp  CommandQueue.cpp  CreateItemCommand.cpp  CreateTriggerCommand.cpp  DeleteItemCommand.cpp  DeleteTriggerCommand.cpp  ResizeCommand.cpp  SetItemPropertyCommand.cpp  SetTileAreaCommand.cpp  SetTileCommand.cpp  ShrinkToFitCommand.cpp
lib/src/Configs/: Sizers.cpp
lib/src/Dialogs/: DialogBase.cpp  DialogBuilderHelper.cpp  EditPropertyDialog.cpp  ErrorInfoDialog.cpp  NewLevelDialog.cpp  PlaytestSettingsDialog.cpp  ResizeLevelDialog.cpp  UpdateConfigPathDialog.cpp  YesNoCancelDialog.cpp
lib/src/Editor/: Editor.cpp  EditorStateManager.cpp
lib/src/Launcher/: PlaytestLauncher.cpp
lib/src/LevelMesh/: DrawableDgmMesh.cpp  DrawableGrid.cpp  DrawableLeveldMesh.cpp  PollableTileMap.cpp
lib/src/Shortcuts/: ShortcutEngine.cpp
lib/src/ToolProperties/: ItemToolProperty.cpp  MeshToolProperty.cpp  TriggerToolProperty.cpp
lib/src/Tools/: LayerController.cpp  SidebarUserInterface.cpp  SidebarUserTrigger.cpp  SidebarUserWithSprites.cpp  Tool.cpp  ToolInterface.cpp  ToolItem.cpp  ToolMesh.cpp  ToolProperty.cpp  ToolPropertyWithImageInterface.cpp  ToolTrigger.cpp
lib/src/Utilities/: CoordConverter.cpp  FileApi.cpp  FontLoader.cpp  ProcessCreator.cpp  Utilities.cpp
lib/tests/: .clang-format  CMakeLists.txt  ShortcutEngine.cpp
lib/tests/include/: EditorMock.hpp  FileApiMock.hpp  MeshAssets.hpp  MeshAssets.hpp.in  TestAssets.hpp.in  fakeit.hpp
lib/tests/include/Stubs/: FileApiStub.hpp
lib/tests/include/TestHelpers/: TestAssets.hpp  TestAssets.hpp.in  YesNoCancelDialogMock.hpp
lib/tests/src/: AppStateEditor.cpp  Box.cpp  CommandHelperTest.cpp  CommandHistoryTest.cpp  CreateDeleteItemCommandTest.cpp  EditorStateManager.cpp  EditorTest.cpp  PhysicalPen.cpp  ProcessCreator.cpp  ShortcutCombo.cpp  ShortcutEngine.cpp  ToolMeshTest.cpp  UtilitiesTest.cpp
props/: EnableUseAfterMoveAnalysis.props  EnableUseAfterMoveAnalysis.props.in  use-after-move.ruleset
resources/: TransparentGrey.txt
sample-project/: sample-binary.cpp
sample_project/: pokus.lvd  pokus2.lvd  sample-binary.bat  sample-config.json
sources/: Main.cpp
src/: AppStateEditor.cpp  AppStateEditor.hpp  AppStateEditor_buildLayout.cpp  AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.cpp  AppStateMainMenu.hpp  AppStateMenuOptions.cpp  AppStateMenuOptions.hpp  BackgroundGrid.cpp  BrushHistory.hpp  Editor.cpp  Editor.hpp  EditorBrush.cpp  EditorBrush.hpp  EditorHistory.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorMode.hpp  EditorState.cpp  EditorState.hpp  FileApi.cpp  FileApi.hpp  Itemset.cpp  Itemset.hpp  JsonHelper.cpp  LogConsole.cpp  LogConsole.hpp  Main.cpp  NewLevelDialog.cpp  NewLevelDialog.hpp  Tilemap.cpp  Tilemap.hpp  Tool.cpp  Tool.hpp  ToolItem.cpp  ToolItem.hpp  ToolMesh.cpp  ToolMesh.hpp  ToolProperty.cpp  (+5 more)
src/deprecated/: _Layer.cpp  _Layer.hpp  _LayerData.cpp  _LayerData.hpp  _LayerProperty.cpp  _LayerProperty.hpp  (+4 more)
